--- a/src/Cms/UserBundle/Resources/public/css/login.css
+++ b/src/Cms/UserBundle/Resources/public/css/login.css
@@ -19,3 +19,10 @@ body {
     position: relative;
     top: 2px;
 }
+@media (max-width: 700px) {
+    .login-form {
+        background-color: #2C3E50;
+        padding: 0px;
+        padding-left: 12px;
+    }
+}
