--- a/src/Cms/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Cms/UserBundle/Resources/views/Security/login.html.twig
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <section class="span offset4">
-                <div class="login">
+                <div class="login-container">
                     <div class="login-form">
                         {% if error %}
                             {% if error.message == 'Bad credentials' %}
@@ -23,11 +23,11 @@
                         <form action="{{ path('login_check') }}" method="post">
                             <div class="control-group">
                                 <label class="login-field-icon fui-user" for="username"></label>
-                                <input type="text" id="username" class="login-field" name="_username" value="{{ last_username }}" placeholder="email" required/>
+                                <input type="text" id="username" class="login-field span" name="_username" value="{{ last_username }}" placeholder="email" required/>
                             </div>
                             <div class="control-group">
                                 <label class="login-field-icon fui-lock" for="login-pass"></label>
-                                <input type="password" id="login-pass" name="_password" class="login-field" placeholder="password" />
+                                <input type="password" id="login-pass" name="_password" class="login-field span" placeholder="password" />
                             </div>
                             <div class="control-group">
                                 <div class="controls">
