--- a/web/flat-ui/css/flat-ui-local.css
+++ b/web/flat-ui/css/flat-ui-local.css
@@ -3431,7 +3431,7 @@ body.vjs-full-window {
     padding-bottom: 11px;
     padding-top: 11px;
     text-indent: 3px;
-    width: 299px;
+    min-width: 299px;
     margin-bottom: 10px !important;
 }
 .login-form .login-field:focus + .login-field-icon {
