--- a/src/Cms/CoreBundle/Resources/public/css/node/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/node/read.css
@@ -146,3 +146,9 @@ a {
         margin-bottom: 20px;
     }
 }
+.upload-media:hover {
+    cursor: pointer;
+}
+#input-featured-image {
+    margin-bottom: 14px;
+}
