added front end for media read all view

--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -4,6 +4,7 @@
     {{ parent() }}
     {% stylesheets
         'flat-ui/calendar/jquery-ui-1.10.3.custom.min.css'
+        '@CmsCoreBundle/Resources/public/css/admin/loop.css'
         '@CmsCoreBundle/Resources/public/css/contentType/read.css'
         filter='cssrewrite, ?yui_css' %}
         <link rel="stylesheet" href="{{ asset_url }}"/>
@@ -155,7 +156,7 @@
                     </div>
                 </div>
                 <div class="span2">
-                    <button class="btn btn-primary btn-block load-data" data-toggle="tooltip" title="yeah dog"><i class="icon-filter"></i> Filter</button>
+                    <button class="btn btn-primary btn-block load-data"><i class="icon-filter"></i> Filter</button>
                 </div>
             </div>
         </div>
