created add media view

--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -22,6 +22,7 @@
         'flat-ui/js/flatui-checkbox.js'
         'flat-ui/js/flatui-calendar.js'
         'flat-ui/js/jquery.tagsinput.js'
+        '@CmsCoreBundle/Resources/public/js/filepicker.js'
         '@CmsCoreBundle/Resources/public/js/mediaUpload.js'
         '@CmsCoreBundle/Resources/public/js/node/read.js'
         '@CmsCoreBundle/Resources/public/js/node/nodeUrlHandler.js'
