--- a/src/Cms/CoreBundle/Resources/views/Media/new.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Media/new.html.twig
@@ -1,13 +1,48 @@
 {% extends 'CmsCoreBundle:App:base.html.twig' %}
 
-{% block body %}
-    <h1>Add Media</h1>
-    {% block notices %}{{  parent() }}{% endblock %}
-    <form action="{{ path('cms_core.media_create') }}" method="post" enctype="multipart/form-data">
-        <input type="hidden" name="token" value="{{ token }}"/>
-        <input type="hidden" name="siteId" value="{{ site.id }}"/>
-        <input type="hidden" name="MAX_FILE_SIZE" value="10737418240" />
-        <input type="file" name="media" size="60"/>
-        <input type="submit" value="Add Media"/>
-    </form>
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets
+    '@CmsCoreBundle/Resources/public/css/media/new.css'
+    filter='cssrewrite, ?yui_css' %}
+    <link rel="stylesheet" href="{{ asset_url }}"/>
+    {% endstylesheets %}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        (function(a){if(window.filepicker){return}var b=a.createElement("script");b.type="text/javascript";b.async=!0;b.src=("https:"===a.location.protocol?"https:":"http:")+"//api.filepicker.io/v1/filepicker.js";var c=a.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c);var d={};d._queue=[];var e="pick,pickMultiple,pickAndStore,read,write,writeUrl,export,convert,store,storeUrl,remove,stat,setKey,constructWidget,makeDropPane".split(",");var f=function(a,b){return function(){b.push([a,arguments])}};for(var g=0;g<e.length;g++){d[e[g]]=f(e[g],d._queue)}window.filepicker=d})(document);
+    </script>
+    {% javascripts
+        '@CmsCoreBundle/Resources/public/js/filepicker.js'
+        '@CmsCoreBundle/Resources/public/js/media/new.js'
+    filter='?yui_js' %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+
+{% block title %}
+    Add Media to {{ site.name|title }} {{ parent() }}
+{% endblock %}
+
+{% block content %}
+    <section class="row-fluid">
+        <div class="span12">
+            <iframe frameborder="0" id="media-uploader" width="100%" height="420"></iframe>
+        </div>
+    </section>
+    <section class="row-fluid">
+        <ul id="media-list" class="hide span12"></ul>
+    </section>
+    <section class="row-fluid hide" id="media-upload-complete">
+        <div class="span2 offset10">
+            <a href="{{ path('cms_core.media_readAll', {'siteId':site.id}) }}" class="btn btn-primary btn-block">Complete</a>
+        </div>
+    </section>
+    <input type="hidden" id="site-id" value="{{ site.id }}"/>
+    <input type="hidden" id="media-add-path" value="{{ path('cms_core.media_add') }}"/>
+    {% block footer %}
+        {{ parent() }}
+    {% endblock %}
 {%  endblock %}
