--- a/src/Cms/CoreBundle/Resources/views/Media/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Media/read.html.twig
@@ -205,4 +205,5 @@
     <input type="hidden" id="site-id" value="{{ site.id }}"/>
     <input type="hidden" id="page" value="{{ page }}"/>
     <input type="hidden" id="delete-media-path" value="{{ path('cms_core.media_delete') }}"/>
+    <input type="hidden" id="base-url" value="{{ app.request.baseUrl }}"/>
 {% endblock %}
