--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -23,7 +23,7 @@
         'flat-ui/js/flatui-calendar.js'
         'flat-ui/js/jquery.tagsinput.js'
         '@CmsCoreBundle/Resources/public/js/filepicker.js'
-        '@CmsCoreBundle/Resources/public/js/mediaUpload.js'
+        '@CmsCoreBundle/Resources/public/js/media/modal.js'
         '@CmsCoreBundle/Resources/public/js/node/read.js'
         '@CmsCoreBundle/Resources/public/js/node/nodeUrlHandler.js'
         filter='?yui_js' %}
@@ -351,14 +351,21 @@
             </div>
         </div>
     </section>
+
+    <div id="primary-media-data-container">
+        here dog
+    </div>
+
     {% block footer %}
         {{ parent() }}
     {% endblock %}
+    <input type="hidden" id="site-id" value="{{ site.id }}"/>
+    <input type="hidden" id="state" value="{{ node.state|default('draft') }}"/>
     <input type="hidden" id="base-url" value="{{ app.request.baseUrl }}"/>
     <input type="hidden" id="save-path" value="{{ path('cms_core.node_save') }}" />
     <input type="hidden" id="delete-path" value="{{ path('cms_core.node_delete') }}"/>
     <input type="hidden" id="read-content-type-path" value="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id}) }}"/>
     <input type="hidden" id="add-category-path" value="{{ path('cms_core.contentType_addCategory') }}"/>
-    <input type="hidden" id="state" value="{{ node.state|default('draft') }}"/>
     <input type="hidden" id="media-add-path" value="{{ path('cms_core.media_add') }}"/>
+    <input type="hidden" id="media-read-all-path" value="{{ path('cms_core.media_readAll', {'siteId':site.id}) }}"/>
 {% endblock %}
