added quick buttons to contentType read all and media read all views

--- a/src/Cms/CoreBundle/Resources/public/css/admin/loop.css
+++ b/src/Cms/CoreBundle/Resources/public/css/admin/loop.css
@@ -29,6 +29,13 @@ table a {
 table thead {
     font-size: 16px;
 }
+.quick-action {
+    list-style: none;
+}
+.quick-action li {
+    display: inline;
+    padding-right: 4px;
+}
 #master-checkbox-container {
     position: relative;
     top: 12px;
