--- a/src/Cms/CoreBundle/Resources/views/Media/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Media/read.html.twig
@@ -156,6 +156,13 @@
                                     {{ media.id }}
                                 {% endif %}
                             </a>
+                            <ul class="quick-action hide">
+                                <li><a href="{{ path('cms_core.media_read', {'siteId':site.id, 'id':media.id}) }}">edit</a></li>
+                                <li>|</li>
+                                <li><a href="#trash" class="quick-delete-action" data-id="{{ media.id }}">trash</a></li>
+                                <li>|</li>
+                                <li><a href="{{ media.url|default('#') }}" target="_blank">view</a></li>
+                            </ul>
                         </td>
                         <td class="data-group-4">
                             {{ media.mime | default() }}
