--- a/src/Cms/CoreBundle/Resources/public/css/bigModal.css
+++ b/src/Cms/CoreBundle/Resources/public/css/bigModal.css
@@ -15,3 +15,18 @@ body .modal-body {
 .media-preview:hover {
    cursor: pointer;
 }
+#media-modal-options {
+    list-style: none;
+}
+#media-modal-options li {
+    display: inline;
+}
+#media-modal-options li a {
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+    top: 6px;
+}
+.media-anchor-visited a{
+    color: grey;
+}
