--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -113,12 +113,15 @@
 {% endblock %}
 
 {% block mediaModal %}
-    <div class="modal hide fade" id="media-modal-container">
+    <div class="modal hide" id="media-modal-container">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h3>Modal header</h3>
+            <ul id="media-modal-options">
+                <li><a href="#library-media" class="media-load-library"><i class="icon-cloud" style="color:white"></i> Library</a></li>
+                <li><a href="#upload-media" class="media-load-upload"><i class="icon-upload-alt" style="color:white"></i> Add New File</a></li>
+            </ul>
         </div>
-        <div class="modal-body row-fluid">
+        <div class="modal-body row-fluid" id="media-library-container">
             <h3 id="media-modal-loader">Loading media...</h3>
             <div class="span9">
                 <div id="primary-media-data-container" class="row-fluid"></div>
@@ -126,6 +129,9 @@
             <div class="span2">
                 <div id="primary-media-editor" class="row-fluid"></div>
             </div>
+        </div>
+        <div class="modal-body hide row-fluid" id="media-uploader-container">
+            <iframe frameborder="0" id="media-upload-iframe" width="100%" height="405"></iframe>
         </div>
         <div class="modal-footer">
             <a href="#" class="btn" data-dismiss="modal">Close</a>
