added media modal pagination

--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -141,8 +141,13 @@
                     <div class="span2">
                         <button class="btn btn-info span12 media-modal-filter"><i class="icon-filter"></i> Filter</button>
                     </div>
+                    <div class="span4">
+                        <button class="btn btn-inverse media-modal-pag-previous span4"><i class="icon-chevron-left"></i> Prev</button>
+                        <button class="btn btn-inverse media-modal-pag-next span4">Next <i class="icon-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div id="primary-media-data-container" class="row-fluid" style="min-height: 200px"></div>
+                <input type="hidden" id="media-modal-input-page" value="1"/>
             </div>
             <div class="span2">
                 <div id="primary-media-editor" class="row-fluid"></div>
