--- a/web/flat-ui/custom/css/custom.css
+++ b/web/flat-ui/custom/css/custom.css
@@ -118,6 +118,19 @@ input[type="color"]:focus,
 .table tbody tr:hover td {
     background-color: #ECF0F1;
 }
+.popover {
+    border: none;
+    -webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;
+    -webkit-box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+       -moz-box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+}
+.popover-title {
+    background-color: #BDC3C7;
+    border: none;
+}
 .login-container {
     padding-top: 22%;
 }
