--- a/src/Cms/CoreBundle/Resources/public/css/app/base.css
+++ b/src/Cms/CoreBundle/Resources/public/css/app/base.css
@@ -46,6 +46,13 @@ footer a {
     margin-bottom: 14px;
     border-bottom: 1px solid #ECF0F1;
 }
+#template-modal-repo > table {
+    font-size: 16px;
+    width: 100%;
+}
+#template-modal-repo tr {
+    height: 35px;
+}
 @media (min-width: 1200px) and (max-width: 1300px) {
     #nav-admin-container {width: 13%;}
 }
